--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
-jekyll-theme-cayman
-
+title: T&T Sample Site
+description: T&T sample site for intro
+show_downloads: true
+google_analytics:
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+  - jekyll-remote-theme
