--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://taylortrujeque.github.io/Taylor-CV/
-baseurl:"/taylortrujeque/Taylor-CV"
+baseurl:"/Taylor-CV"
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme
