--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ baseurl:"Taylor-CV"
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: Taylor Trujeqe
+title: Taylor Trujeque
 description: Academic Portfolio
